# L3G4200D_Driver

./: README.md
Drivers/HAL/L3G4200D_STM32_HALDriver/: CMakeLists.txt  L3G4200D_HAL.c  L3G4200D_HAL.h
Drivers/Low-Layer/L3G4200D_STM32_LLDriver/: CMakeLists.txt  L3G4200D_LL.c  L3G4200D_LL.h  cmake_install.cmake
STM32_HALDriver_Example/Example_I2C_Protocol/: .mxproject  CMakeCache.txt  CMakeLists.txt  Example_I2C_Protocol.ioc  build.ninja  cmake_install.cmake  compile_commands.json
STM32_HALDriver_Example/Example_I2C_Protocol/Core/Src/: main.c
STM32_HALDriver_Example/Example_I2C_Protocol/User_Libraries/L3G4200D_STM32_HALDriver/: CMakeLists.txt  L3G4200D_HAL_I2C.c  L3G4200D_HAL_I2C.h  cmake_install.cmake
STM32_HALDriver_Example/Example_SPI_Protocol/: .mxproject  CMakeCache.txt  CMakeLists.txt  Example_SPI_Protocol.ioc  build.ninja  cmake_install.cmake  compile_commands.json
STM32_HALDriver_Example/Example_SPI_Protocol/User_Libraries/L3G4200D_STM32_HALDriver/: CMakeLists.txt  L3G4200D_HAL_SPI.c  L3G4200D_HAL_SPI.h  cmake_install.cmake
STM32_LLDriver_Example/Example_I2C_Protocol/: .mxproject  CMakeCache.txt  CMakeLists.txt  Example_I2C_Protocol.ioc  build.ninja  cmake_install.cmake  compile_commands.json
STM32_LLDriver_Example/Example_SPI_Protocol/: .mxproject  CMakeCache.txt  CMakeLists.txt  Example_SPI_Protocol.ioc  build.ninja  cmake_install.cmake  compile_commands.json
STM32_LLDriver_Example/Example_SPI_Protocol/User_Libraries/L3G4200D_STM32_LLDriver/: CMakeLists.txt  L3G4200D_LL_SPI.c  L3G4200D_LL_SPI.h  cmake_install.cmake
(+15 files in other folders)
